--- a/src/Components/Faq/Faq.module.css
+++ b/src/Components/Faq/Faq.module.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    gap:4rem;
+    gap:6rem;
 
 }
 
@@ -36,6 +36,20 @@ width: 100%;
     font-size:24px !important;
     font-weight: 600;
 }
+@media screen and (max-width:1200px)
+{
+    .section-wrapper{
+       
+        gap:4rem;
+    }
+}
+@media screen and (max-width:1091px) {
+
+    .section-wrapper{
+        gap:1.5rem;
+    }
+}
+
 @media screen and (max-width:640px)
 {
     .heading{
